# tracking

./: 28sig  CHANGELOG  CMakeLists.txt  LICENSE  README.md  clean_log.sh  expt.sh  mainpage.dox  manifest.xml  mvtest.sh
include/tagloc/: algorithms.h  tagloc.h  tracking.h
msg/: Tag.msg
old/: client.cpp  init.cpp  newserver.cpp  server.cpp  tagloc.h  tagloc_settings
oldsrv/: AddTag.srv  CheckTag.srv  GetTag.srv  GreedyStep.srv  Init.srv  Measurement.srv  SaveTarget.srv  SetTag.srv  TrigCommand.srv  TrigManyCommand.srv  UpdateStep.srv
src/: algorithms.cpp  batchtest.cpp  circumcircletest.cpp  ekftest.cpp  ellipsetest.cpp  estimator.cpp  estimator_server.cpp  faker_out.cpp  faker_rend.cpp  icra_Atest.cpp  icra_sims.cpp  icratest.cpp  iekftest.cpp  iwls_prior.cpp  iwlstest.cpp  iwlstest_prior.cpp  lineinttest.cpp  multistep.cpp  onestep.cpp  onesteptest.cpp  quicksilver  rosiwlstest.cpp  tracking.cpp  twostep.cpp  twosteptest.cpp
srv/: Estimation.srv
